<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:padding="3dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_ktv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body17"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_frontpage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body18"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_hotel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body19"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_relax" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body20"
                android:textSize="@dimen/cityName" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_yanchu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body21"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_pet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body22"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_jiazhuang" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body23"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_more" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body24"
                android:textSize="@dimen/cityName" />

        </LinearLayout>




    </LinearLayout>

</LinearLayout>
