<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:padding="3dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_shoppingmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body9"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_footer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body10"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_hotel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body11"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_relax" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body12"
                android:textSize="@dimen/cityName" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_baby" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body13"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_sport" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body14"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_liren" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body15"
                android:textSize="@dimen/cityName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_home_imarry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body16"
                android:textSize="@dimen/cityName" />

        </LinearLayout>




    </LinearLayout>

</LinearLayout>
